tests/valid/61015_imperative_loop/imperative_loop.agu
-- Author: 61015, Filipe Lopes

let n : Int = 5;
while n > 0 do (
  set n = n - 1
);
print(n);