tests/invalid-syntax/46494_syntatic_error_2/while_miss_do.agu
-- 46494, Leonor Figueirinhas

let loop (n) : Int -> Int =
    while n > 0 (
        set n = n + 1
    );
    n